TP2/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BCOM
    BFUNY
    BGRAM
    BPARSER
    BYACC
    ECOM
    EFUNY
    EGRAM
    EOF
    PREC
    TS
    comm
    funY
    gram
    instructions
    preceList
    tsList

Grammar

Rule 0     S' -> Lex
Rule 1     Lex -> BLEX Vars Funs
Rule 2     Vars -> Vars Var
Rule 3     Vars -> <empty>
Rule 4     Var -> LIT literals
Rule 5     Var -> IGN ig
Rule 6     Var -> TOK tokenList
Rule 7     Funs -> Funs Fun EFUNL
Rule 8     Funs -> <empty>
Rule 9     Fun -> BFUNL funL

Terminals, with rules where they appear

BCOM                 : 
BFUNL                : 9
BFUNY                : 
BGRAM                : 
BLEX                 : 1
BPARSER              : 
BYACC                : 
ECOM                 : 
EFUNL                : 7
EFUNY                : 
EGRAM                : 
EOF                  : 
IGN                  : 5
LIT                  : 4
PREC                 : 
TOK                  : 6
TS                   : 
comm                 : 
error                : 
funL                 : 9
funY                 : 
gram                 : 
ig                   : 5
instructions         : 
literals             : 4
preceList            : 
tokenList            : 6
tsList               : 

Nonterminals, with rules where they appear

Fun                  : 7
Funs                 : 1 7
Lex                  : 0
Var                  : 2
Vars                 : 1 2

Parsing method: LALR

state 0

    (0) S' -> . Lex
    (1) Lex -> . BLEX Vars Funs

    BLEX            shift and go to state 2

    Lex                            shift and go to state 1

state 1

    (0) S' -> Lex .



state 2

    (1) Lex -> BLEX . Vars Funs
    (2) Vars -> . Vars Var
    (3) Vars -> .

    LIT             reduce using rule 3 (Vars -> .)
    IGN             reduce using rule 3 (Vars -> .)
    TOK             reduce using rule 3 (Vars -> .)
    BFUNL           reduce using rule 3 (Vars -> .)
    $end            reduce using rule 3 (Vars -> .)

    Vars                           shift and go to state 3

state 3

    (1) Lex -> BLEX Vars . Funs
    (2) Vars -> Vars . Var
    (7) Funs -> . Funs Fun EFUNL
    (8) Funs -> .
    (4) Var -> . LIT literals
    (5) Var -> . IGN ig
    (6) Var -> . TOK tokenList

    BFUNL           reduce using rule 8 (Funs -> .)
    $end            reduce using rule 8 (Funs -> .)
    LIT             shift and go to state 6
    IGN             shift and go to state 7
    TOK             shift and go to state 8

    Funs                           shift and go to state 4
    Var                            shift and go to state 5

state 4

    (1) Lex -> BLEX Vars Funs .
    (7) Funs -> Funs . Fun EFUNL
    (9) Fun -> . BFUNL funL

    $end            reduce using rule 1 (Lex -> BLEX Vars Funs .)
    BFUNL           shift and go to state 10

    Fun                            shift and go to state 9

state 5

    (2) Vars -> Vars Var .

    LIT             reduce using rule 2 (Vars -> Vars Var .)
    IGN             reduce using rule 2 (Vars -> Vars Var .)
    TOK             reduce using rule 2 (Vars -> Vars Var .)
    BFUNL           reduce using rule 2 (Vars -> Vars Var .)
    $end            reduce using rule 2 (Vars -> Vars Var .)


state 6

    (4) Var -> LIT . literals

    literals        shift and go to state 11


state 7

    (5) Var -> IGN . ig

    ig              shift and go to state 12


state 8

    (6) Var -> TOK . tokenList

    tokenList       shift and go to state 13


state 9

    (7) Funs -> Funs Fun . EFUNL

    EFUNL           shift and go to state 14


state 10

    (9) Fun -> BFUNL . funL

    funL            shift and go to state 15


state 11

    (4) Var -> LIT literals .

    LIT             reduce using rule 4 (Var -> LIT literals .)
    IGN             reduce using rule 4 (Var -> LIT literals .)
    TOK             reduce using rule 4 (Var -> LIT literals .)
    BFUNL           reduce using rule 4 (Var -> LIT literals .)
    $end            reduce using rule 4 (Var -> LIT literals .)


state 12

    (5) Var -> IGN ig .

    LIT             reduce using rule 5 (Var -> IGN ig .)
    IGN             reduce using rule 5 (Var -> IGN ig .)
    TOK             reduce using rule 5 (Var -> IGN ig .)
    BFUNL           reduce using rule 5 (Var -> IGN ig .)
    $end            reduce using rule 5 (Var -> IGN ig .)


state 13

    (6) Var -> TOK tokenList .

    LIT             reduce using rule 6 (Var -> TOK tokenList .)
    IGN             reduce using rule 6 (Var -> TOK tokenList .)
    TOK             reduce using rule 6 (Var -> TOK tokenList .)
    BFUNL           reduce using rule 6 (Var -> TOK tokenList .)
    $end            reduce using rule 6 (Var -> TOK tokenList .)


state 14

    (7) Funs -> Funs Fun EFUNL .

    BFUNL           reduce using rule 7 (Funs -> Funs Fun EFUNL .)
    $end            reduce using rule 7 (Funs -> Funs Fun EFUNL .)


state 15

    (9) Fun -> BFUNL funL .

    EFUNL           reduce using rule 9 (Fun -> BFUNL funL .)

